<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_socialgpt">

    <fragment
        android:id="@+id/nav_transform"
        android:name="net.tornevall.android.tools.ui.transform.TransformFragment"
        android:label="@string/menu_transform"
        tools:layout="@layout/fragment_transform" />

    <fragment
        android:id="@+id/nav_reflow"
        android:name="net.tornevall.android.tools.ui.reflow.ReflowFragment"
        android:label="@string/menu_reflow"
        tools:layout="@layout/fragment_reflow" />

    <fragment
        android:id="@+id/nav_socialgpt"
        android:name="net.tornevall.android.tools.ui.socialgpt.SocialGptFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_socialgpt">
        <argument
            android:name="shared_text"
            app:argType="string"
            android:defaultValue="" />
        <argument
            android:name="auto_verify"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="net.tornevall.android.tools.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>